--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Python 3",
-  "image": "mcr.microsoft.com/devcontainers/python:3.12-alpine",
+  "image": "mcr.microsoft.com/devcontainers/python:3.12.0-alpine",
   "customizations": {
     "codespaces": {
       "openFiles": [
@@ -16,7 +16,7 @@
       ]
     }
   },
-  "updateContentCommand": "apk update && apk upgrade && apk add python3 py3-pip && [ -f packages.txt ] && xargs apk add <packages.txt && [ -f requirements.txt ] && pip install --user -r requirements.txt && pip install --user streamlit; echo '✅ Packages installed and Requirements met'",
+  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
   "postAttachCommand": {
     "server": "streamlit run dashboard/app.py --server.enableCORS false --server.enableXsrfProtection false"
   },
