--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Python 3",
-  "image": "mcr.microsoft.com/devcontainers/python:3.12.5-alpine",
+  "image": "mcr.microsoft.com/devcontainers/python:12-bullseye",
   "customizations": {
     "codespaces": {
       "openFiles": [
