--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,94 @@
-scrapy
-selenium
-st-gsheets-connection
-streamlit
+altair==5.5.0
+attrs==25.1.0
+Automat==24.8.1
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+constantly==23.10.4
+cryptography==44.0.0
+cssselect==1.2.0
+decorator==5.1.1
+defusedxml==0.7.1
+duckdb==1.2.0
+filelock==3.17.0
+gitdb==4.0.11
+GitPython==3.1.41
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+gspread==5.12.4
+gspread-dataframe==4.0.0
+gspread-formatting==1.2.0
+gspread-pandas==3.3.0
+h11==0.14.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+itemadapter==0.11.0
+itemloaders==1.3.2
+Jinja2==3.1.5
+jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.25.1
+numpy==2.2.2
+oauthlib==3.2.2
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+parsel==1.10.0
+pillow==11.1.0
+Protego==0.4.0
+protobuf==5.29.3
+pyarrow==19.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydeck==0.9.1
+PyDispatcher==2.0.7
+Pygments==2.19.1
+pyOpenSSL==25.0.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+queuelib==1.7.0
+referencing==0.36.2
+requests==2.32.3
+requests-file==2.1.0
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+Scrapy==2.12.0
+selenium==4.28.1
+service-identity==24.2.0
+six==1.17.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sql_metadata==2.15.0
+sqlparse==0.5.3
+st-gsheets-connection==0.1.0
+streamlit==1.42.0
+tenacity==9.0.0
+tldextract==5.1.3
+toml==0.10.2
+tornado==6.4.2
+trio==0.28.0
+trio-websocket==0.11.1
+Twisted==24.11.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+validators==0.34.0
+w3lib==2.3.1
+watchdog==6.0.0
+websocket-client==1.8.0
+wsproto==1.2.0
+zope.interface==7.2
